--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.14.0",
+    "@types/json-bigint": "^1.0.4",
     "classnames": "^2.5.1",
+    "json-bigint": "^1.0.0",
     "next": "14.2.3",
-    "react": "^18",
+    "react": "18.2.0",
     "react-dom": "^18",
     "styled-components": "^6.1.11"
   },
