added postinstall for prisma to work on vercel's hosting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "paths": {
       "@/*": ["./src/*"],
       "@components/*": ["./src/components/*"]
-    }
+    },
+    "noImplicitAny": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
