--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "postinstall": "npx prisma generate"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.4.0",
     "@prisma/client": "^5.14.0",
+    "@react-google-maps/api": "^2.19.3",
     "@types/json-bigint": "^1.0.4",
     "classnames": "^2.5.1",
+    "core-js": "^3.37.1",
     "json-bigint": "^1.0.0",
     "next": "14.2.3",
     "react": "18.2.0",
