--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "^18",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
