--- a/package.json
+++ b/package.json
@@ -13,13 +13,22 @@
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@prisma/client": "^5.14.0",
     "@react-google-maps/api": "^2.19.3",
+    "@turf/turf": "^7.0.0",
+    "@types/geojson": "^7946.0.14",
     "@types/json-bigint": "^1.0.4",
     "classnames": "^2.5.1",
     "core-js": "^3.37.1",
+    "h3-js": "^4.1.0",
+    "install": "^0.13.0",
     "json-bigint": "^1.0.0",
-    "next": "14.2.3",
+    "leaflet": "^1.9.4",
+    "next": "^14.2.5",
+    "npm": "^10.8.2",
+    "ol": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
+    "react-openlayers": "^0.3.0",
     "styled-components": "^6.1.11",
     "zustand": "^4.5.4"
   },
@@ -30,6 +39,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prisma": "^5.17.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
