--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/json-bigint": "^1.0.4",
     "classnames": "^2.5.1",
     "core-js": "^3.37.1",
+    "decimal.js": "^10.4.3",
     "h3-js": "^4.1.0",
     "install": "^0.13.0",
     "json-bigint": "^1.0.0",
