--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "install": "^0.13.0",
     "json-bigint": "^1.0.0",
     "leaflet": "^1.9.4",
+    "moment": "^2.30.1",
     "next": "^14.2.5",
     "npm": "^10.8.2",
     "ol": "^10.0.0",
