successfully added login modal

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@prisma/client": "^5.14.0",
     "@react-google-maps/api": "^2.19.3",
     "@turf/turf": "^7.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/geojson": "^7946.0.14",
     "@types/json-bigint": "^1.0.4",
+    "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
     "core-js": "^3.37.1",
     "decimal.js": "^10.4.3",
@@ -29,6 +31,7 @@
     "ol": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-leaflet": "^4.2.1",
     "react-openlayers": "^0.3.0",
     "styled-components": "^6.1.11",
