--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/geojson": "^7946.0.14",
     "@types/json-bigint": "^1.0.4",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/nodemailer": "^6.4.16",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
     "core-js": "^3.37.1",
@@ -24,9 +26,11 @@
     "h3-js": "^4.1.0",
     "install": "^0.13.0",
     "json-bigint": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "next": "^14.2.5",
+    "nodemailer": "^6.9.15",
     "npm": "^10.8.2",
     "ol": "^10.0.0",
     "react": "18.2.0",
