--- a/package.json
+++ b/package.json
@@ -11,23 +11,28 @@
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.0",
-    "@prisma/client": "^5.14.0",
+    "@prisma/client": "^5.20.0",
     "@react-google-maps/api": "^2.19.3",
     "@turf/turf": "^7.0.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie": "^0.6.0",
     "@types/geojson": "^7946.0.14",
     "@types/json-bigint": "^1.0.4",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/lodash": "^4.17.9",
     "@types/nodemailer": "^6.4.16",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
+    "cookie": "^0.6.0",
     "core-js": "^3.37.1",
     "decimal.js": "^10.4.3",
     "h3-js": "^4.1.0",
     "install": "^0.13.0",
     "json-bigint": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "next": "^14.2.5",
     "nodemailer": "^6.9.15",
