--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 DATABASE_URL="mysql://cayluapi:cayluapi24@192.168.22.118:3306/caylu"
+SMTP_USER="manofthebag@gmail.com"
+SMTP_PASS="sugs elpp rroc mtze "
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT=587
