--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.0",
+    "@headlessui/react": "^2.1.8",
     "@prisma/client": "^5.20.0",
     "@react-google-maps/api": "^2.19.3",
     "@turf/turf": "^7.0.0",
