--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@headlessui/react": "^2.1.8",
     "@prisma/client": "^5.20.0",
     "@react-google-maps/api": "^2.19.3",
-    "@turf/turf": "^7.0.0",
+    "@turf/turf": "^7.1.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie": "^0.6.0",
     "@types/geojson": "^7946.0.14",
@@ -27,7 +27,9 @@
     "cookie": "^0.6.0",
     "core-js": "^3.37.1",
     "decimal.js": "^10.4.3",
+    "geojson": "^0.5.0",
     "h3-js": "^4.1.0",
+    "i18next": "^23.15.1",
     "install": "^0.13.0",
     "json-bigint": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -36,12 +38,14 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "next": "^14.2.5",
+    "next-i18next": "^15.3.1",
     "nodemailer": "^6.9.15",
     "npm": "^10.8.2",
-    "ol": "^10.0.0",
+    "ol": "^10.2.1",
     "react": "18.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-openlayers": "^0.3.0",
