--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.9",
     "@types/nodemailer": "^6.4.16",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
     "cookie": "^0.6.0",
@@ -56,7 +58,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^9.12.0",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "prisma": "^5.20.0",
